--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 .navbar {
     background: linear-gradient(0deg,#0062CC, #007bff);
-    padding-left: 15px;
-    padding-right: 20px;
 }
 
 .card-img-top {
@@ -27,6 +25,7 @@
 
 .footer {
     text-align: center;
+    margin-bottom: 25px;
     font-size: 12px;
     padding-left: 300px;
     padding-right: 300px;
