--- a/scorestyle.css
+++ b/scorestyle.css
@@ -25,7 +25,6 @@
 
 .footer {
     text-align: center;
-    margin-bottom: 25px;
     font-size: 12px;
     padding-left: 300px;
     padding-right: 300px;
@@ -105,7 +104,7 @@ p {
     font-weight: bold;
   }
 
-.record {
+  .record, .venue {
     font-size: 12px;
     font-style: italic;
 }
