--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 .card-img-top-wide {
-    padding-left: 145px;
-    padding-right: 145px;
+    /* padding-left: 100px;
+    padding-right: 100px; */
     margin-top: 20px;
     margin-bottom: -10px;
     height: 100px;
@@ -41,4 +41,81 @@ a.custom-card,
 a.custom-card:hover {
   color: inherit;
   text-decoration: none;
+}
+
+.navbar {
+    background: linear-gradient(0deg,#0062CC, #007bff);
+}
+
+.p-grey {
+    font-size: 14px;
+    background-color: lightgrey;
+    margin: 0px 15px 15px 15px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 8px;
+    line-height: 20px;
+    border-color: #d2d2d2;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.p-blue {
+    font-size: 14px;
+    background-color: rgb(153, 204, 255);
+    margin: 0px 15px 15px 15px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 8px;
+    line-height: 20px; 
+    border-color: #d2d2d2;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.p-red {
+    font-size: 14px;
+    background-color: rgb(255, 153, 153);
+    margin: 0px 15px 15px 15px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 8px;
+    line-height: 20px; 
+    border-color: #d2d2d2;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.p-green {
+    font-size: 14px;
+    background-color: rgb(153, 255, 153);
+    margin: 0px 15px 15px 15px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    line-height: 20px; 
+    border-color: #d2d2d2;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.tdName {
+    border-collapse: collapse;
+    background-color: white;
+    text-align: left;
+    padding-left: 5px;
+    width: 302px;
+  }
+
+.tdScore {
+    border-collapse: collapse;
+    background-color: white;
+    text-align: center;
+    width: 50px;
+    font-weight: bold;
+  }
+
+  .record, .venue {
+    font-size: 12px;
+    font-style: italic;
 }
